# FogML-Zephyr

./: CMakeLists.txt  README.md  prj.conf
src/: fogml_config.h  main.c
src/fogml_generated/: kmeans_anomaly_model.c  min_max_scaler_model.c  random_forest_model.c
tools/: FogML_SDK_Tools_Zephyr.ipynb
